--- a/myapp/cm.yaml
+++ b/myapp/cm.yaml
@@ -4,4 +4,4 @@ metadata:
         name: myapp
 data:
         index.html: |
-                Get outta here! This is a custom app
+                This is a custom app
