--- a/myapp/cm.yaml
+++ b/myapp/cm.yaml
@@ -4,4 +4,4 @@ metadata:
         name: myapp
 data:
         index.html: |
-                This is a custom app
+                Get outta here, dude! This is a custom app
